# Dugongs_IRISA-MARBEC-LIRMM

./: README.md  connector.ipynb  launch2.py  launch3.py  pyproject.toml  requirements.txt
docs/source/tutorials/: gemini_vision.ipynb
fiftyone/: launch.py
