[project]
name = "fifty"
version = "0.1.0"
description = "FiftyOne venv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "anyio==4.12.1",
    "argcomplete==3.6.3",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.1",
    "async-lru==2.1.0",
    "attrs==25.4.0",
    "babel==2.18.0",
    "backports-zstd==1.3.0",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "boto3==1.42.47",
    "botocore==1.42.47",
    "brotli==1.2.0",
    "cachetools==7.0.1",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cross-web==0.4.1",
    "cryptography==46.0.5",
    "cycler==0.12.1",
    "dacite==1.9.2",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "deprecated==1.3.1",
    "dill==0.4.1",
    "dnspython==2.8.0",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "fiftyone==1.12.0",
    "fiftyone-brain==0.21.5",
    "fiftyone-db==1.4.1",
    "fonttools==4.61.1",
    "fqdn==1.5.1",
    "ftfy==6.3.1",
    "glob2==0.7",
    "graphql-core==3.2.7",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "humanize==4.15.0",
    "hypercorn==0.18.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "imageio==2.37.2",
    "inflate64==1.0.4",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.1.0",
    "joblib==1.5.3",
    "json5==0.13.0",
    "jsonlines==4.0.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.4",
    "jupyterlab==4.5.5",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.4.9",
    "lark==1.3.1",
    "lazy-loader==0.4",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mistune==3.2.0",
    "mongoengine==0.29.1",
    "motor==3.6.1",
    "multivolumefile==0.2.3",
    "narwhals==2.16.0",
    "nbclient==0.10.4",
    "nbconvert==7.17.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "notebook==7.5.3",
    "notebook-shim==0.2.4",
    "numpy==2.4.2",
    "opencv-python-headless==4.13.0.92",
    "openpyxl==3.1.5",
    "overrides==7.7.0",
    "packaging==26.0",
    "pandas==3.0.0",
    "pandocfilters==1.5.1",
    "paramiko==3.5.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.5.1",
    "plotly==6.5.2",
    "pprintpp==0.4.0",
    "priority==2.0.0",
    "prometheus-client==0.24.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py7zr==1.1.0",
    "pybcj==1.0.7",
    "pycparser==3.0",
    "pycryptodomex==3.23.0",
    "pydash==8.0.6",
    "pygments==2.19.2",
    "pymongo==4.9.2",
    "pynacl==1.6.2",
    "pyparsing==3.3.2",
    "pyppmd==1.3.1",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==4.0.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "rarfile==4.2",
    "referencing==0.37.0",
    "regex==2026.1.15",
    "requests==2.32.5",
    "retrying==1.4.2",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==0.30.0",
    "rtree==1.4.1",
    "s3transfer==0.16.0",
    "scikit-image==0.26.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "send2trash==2.1.0",
    "setuptools==82.0.0",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.3",
    "sse-starlette==0.10.3",
    "sseclient-py==1.9.0",
    "stack-data==0.6.3",
    "starlette==0.52.1",
    "strawberry-graphql==0.291.3",
    "tabulate==0.9.0",
    "terminado==0.18.1",
    "texttable==1.7.0",
    "threadpoolctl==3.6.0",
    "tifffile==2026.1.28",
    "tinycss2==1.4.0",
    "tornado==6.5.4",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "universal-analytics-python3==1.1.1",
    "uri-template==1.3.0",
    "urllib3==2.6.3",
    "voxel51-eta==0.15.3",
    "wcwidth==0.6.0",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "widgetsnbextension==4.0.15",
    "wrapt==2.1.1",
    "wsproto==1.3.2",
    "xmltodict==1.0.2",
]
